Front page text is now stored in a server side file

--- a/ProjectSection/templates/project.html
+++ b/ProjectSection/templates/project.html
@@ -9,7 +9,7 @@
 
         <title> Puzzlebot Corner - Projects </title>
 
-        <link rel="stylesheet" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
+        {% include 'frameworks.html' %}
 
         <!-- Load custom stylesheets -->
         <link rel="stylesheet" href="{% static 'css/siteHeadStyle.css' %}">
