--- a/ContactSection/templates/contact.html
+++ b/ContactSection/templates/contact.html
@@ -10,9 +10,7 @@
         <title> Puzzlebot Corner - Projects </title>
 
         <!-- Get static bootstrap and jquery files from the static url -->
-        <script src="{% static 'jquery-3.2.1.js'%}"></script>
-        <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.min.js'%}"></script>
-        <link rel="stylesheet" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
+        {% include 'frameworks.html' %}
 
         <!-- Load custom stylesheets and javascript -->
         <link rel="stylesheet" href="{% static 'css/siteHeadStyle.css' %}">
