Resolved TLS version issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,15 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
+                    <div class="panel panel-default">
+                        <div class="panel-heading" id="sideBlock1-titleBox">
+                            <h4 id="sideBlock1-title">Read this: XKCD by Randall Monroe</h3>
+                        </div>
+                        <div class="panel-body" id="sideBlock1-bodyBox">
+                            <p>XKCD is a humorous webcomic featuring slice-of-life situations various fields of science and engineering, written by a man who seems to know way too much. Give it a read!</p>
+                            <p>Latest XKCD: </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-1"></div>
             </div>
