Added self-updating side link

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,10 @@
                         </div>
                         <div class="panel-body" id="sideBlock1-bodyBox">
                             <p>XKCD is a humorous webcomic featuring slice-of-life situations various fields of science and engineering, written by a man who seems to know way too much. Give it a read!</p>
-                            <p>Latest XKCD: </p>
+                            <p>Latest XKCD: #{{ xkcdComicNum }}:
+                                <a href="https://xkcd.com">"{{ xkcdTitle }}"</a>
+                            </p>
+
                         </div>
                     </div>
                 </div>
