Project panel maximum size limited, css overflow changed to auto

--- a/ProjectSection/static/css/projectStyle.css
+++ b/ProjectSection/static/css/projectStyle.css
@@ -19,6 +19,11 @@
     font-size: 14pt;
 }
 
+.portfol-projectPanelBody{
+    max-height: 64px;
+    overflow-y: auto;
+}
+
 #projectPageLeft{
     visibility: hidden;
 }
