Added dropdown menu, for additional project pages in the future

--- a/ProjectSection/templates/project.html
+++ b/ProjectSection/templates/project.html
@@ -53,6 +53,7 @@
     <script>
     $( document ).ready(function(){
         initializePages({{ pageCount }});
+        $('.dropdown-toggle').dropdown();
     })
     </script>
 
