--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                             <h4 class="portfol-panelTitleText" id="sideBlock1-title">Read this: XKCD by Randall Monroe</h3>
                         </div>
                         <div class="panel-body" id="sideBlock1-bodyBox">
-                            <p>XKCD is a humorous webcomic featuring slice-of-life situations various fields of science and engineering, written by a man who seems to know way too much. Give it a read!</p>
+                            <p>XKCD is a humorous webcomic featuring slice-of-life situations from various fields of science and engineering, written by a man who seems to know way too much. Give it a read!</p>
                             <h5 class="portfol-panelBodyText" id="sideBlock1-body">Latest XKCD: #{{ xkcdComicNum }}: <a href="https://xkcd.com">"{{ xkcdTitle }}"</a></h5>
 
                         </div>
