--- a/staticServe/css/projectStyle.css
+++ b/staticServe/css/projectStyle.css
@@ -19,6 +19,11 @@
     font-size: 14pt;
 }
 
+.portfol-projectPanelBody{
+    height: 64px;
+    overflow-y: auto;
+}
+
 #projectPageLeft{
     visibility: hidden;
 }
