Added stubs for embedded project section

--- a/templates/siteHead.html
+++ b/templates/siteHead.html
@@ -55,8 +55,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/projects/">Standalone Applications</a></li>
-                                <li><a href="#">Embedded Site Applications</a></li>
+                                <li><a href="/projects/standalone">Standalone Applications</a></li>
+                                <li><a href="/projects/embedded">Embedded Site Applications</a></li>
                             </ul>
                         </li>
                         <li id="contactButton"><a href="/contact/">Contact</a></li>
