--- a/ProjectSection/templates/project.html
+++ b/ProjectSection/templates/project.html
@@ -22,7 +22,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-2"></div>
-                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                </div>
                 <div class="col-sm-4" id="projectPageButtons">
                     <button class="btn projectPageButtonElement" id="projectPageRight" type="button"> > </button>
                     <p class="projectPageButtonElement" id="pageCountText"></p>
