Started embedded app - Pick A number, interface wireframe created

--- a/EmbeddedProjectSection/Templates/embeddedProjectIndex.html
+++ b/EmbeddedProjectSection/Templates/embeddedProjectIndex.html
@@ -31,6 +31,11 @@
                     <h2>Site Directory - Embedded applications</h2>
                     <p>On this page are links to applications I have developed which are embedded into the site itself. Follow the links to view and use the apps.</p>
                 </div>
+
+                <div class="row" id="embed_PickANumber">
+                    <h4><a href="/projects/embedded/pickANumber">"Pick a number"</a></h4>
+                    <p>A small app used for picking a person to do something. It's essentially the software version of asking a group of friends to "Pick a number between 1 and 10, whoever's number is closest to mine has to do the thing."</p>
+                </div>
             </div>
             <div class="col-sm-1"></div>
         </div>
